--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -313,3 +313,22 @@ body {
   display: flex;
   align-items: center;
 }
+
+/* edit-form */
+.edit-form {
+  display: flex;
+  justify-content: center;
+}
+
+.edit-input input{
+  min-width: 200px;
+  height: 30px;
+  margin: 10px 5px;
+}
+
+.edit-btn-form button{
+  width: 6%;
+  min-width: 80px;
+  height: 25px;
+  margin: 0 5px;
+}
