--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -263,6 +263,7 @@ body {
   color: #fff;
   font-weight: bold;
   padding: 10px;
+  cursor: pointer;
 }
 
 .header {
@@ -331,4 +332,5 @@ body {
   min-width: 80px;
   height: 25px;
   margin: 0 5px;
+  cursor: pointer;
 }
