--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -357,3 +357,37 @@ body {
   background-color: #00bc77;
   color: #fff;
 }
+
+/********** Loader **********/
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* Assurez-vous que le z-index est supérieur à celui du contenu */
+}
+
+.loader-circle {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #ccc;
+  border-top: 5px solid #00bc77; /* Changez la couleur selon votre préférence */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
