--- a/frontend/src/styles/components/_transactionItem.scss
+++ b/frontend/src/styles/components/_transactionItem.scss
@@ -2,7 +2,17 @@
   border-bottom: 1px solid #ccc;
   background-color: #f2f2f2;
 
-  .transaction-header {
+  .transaction-content {
+    display: flex;
+    align-items: center;
+    // font-weight: bold;
+    padding: 10px;
+
+    div {
+      flex: 1;
+      padding: 5px;
+    }
+
     .transaction-date {
       font-size: 1em;
       text-align: center;
