--- a/frontend/src/styles/components/_transactionsPage.scss
+++ b/frontend/src/styles/components/_transactionsPage.scss
@@ -25,7 +25,7 @@
   width: 80%;
   max-width: 1340px;
   margin: 0 auto;
-  padding: 80px;
+  padding: 80px 0;
 
   .transactions-title {
     display: flex;
